--- a/front/upload.html
+++ b/front/upload.html
@@ -4,10 +4,16 @@
   <meta charset="utf-8">
   <title>Local network server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type="text/javascript" src="/upload.js"></script>
 </head>
 
 <body>
-    <p>Conectado</p>
+    <div>
+        <p>PASSWORD</p>
+        <input id="inputId" type="text">
+        <button id="buttonId">Enviar</button>
+
+    </div>
 </body>
 
 </html>
