--- a/front/upload.html
+++ b/front/upload.html
@@ -8,12 +8,15 @@
 </head>
 
 <body>
-    <div>
+    <div id="passwordDiv">
         <p>PASSWORD</p>
         <input id="inputId" type="text">
         <button id="buttonId">Enviar</button>
+    </div>
+    <div id="">
 
     </div>
+
 </body>
 
 </html>
