--- a/front/upload.html
+++ b/front/upload.html
@@ -5,6 +5,7 @@
   <title>Local network server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript" src="/upload.js"></script>
+  <script src="forge.min.js"></script>
 </head>
 
 <body>
