--- a/front/uploadDiv.html
+++ b/front/uploadDiv.html
@@ -1,2 +1,6 @@
 
-<p>Accediste :)</p>
+<form method="POST" action="/upload" enctype="multipart/form-data"> 
+    <label for="file-upload">Selecciona un archivo:</label>
+    <input type="file" id="file-upload" name="archivo" filename="nombre_archivo.pdf">
+    <input type="submit" value="Enviar">
+</form>
