--- a/front/upload.html
+++ b/front/upload.html
@@ -7,17 +7,18 @@
   <script type="text/javascript" src="/upload.js"></script>
   <script src="clientCryptoUtils.js"></script>
   <script src="forge.min.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
-    <div id="passwordDiv">
-        <p>PASSWORD</p>
-        <input id="inputId" type="text">
-        <button id="buttonId">Enviar</button>
-    </div>
-    <div id="">
+  <div id="">
 
-    </div>
+  </div>
+  <div id="passwordDiv">
+      <p>PASSWORD</p>
+      <input id="inputId" type="text">
+      <button id="buttonId">Enviar</button>
+  </div>
 
 </body>
 
