--- a/front/uploadDiv.html
+++ b/front/uploadDiv.html
@@ -5,22 +5,26 @@
     <button onclick="
     //CODE TO UPLOAD
     const fileInput = document.getElementById('file-upload');
-    const fileName = fileInput.files[0].name
+    const file = fileInput.files[0]
+    const fileName = file.name
     console.log('uploading')
-    const formData = new FormData();
-    formData.append('file', fileInput.files[0]);
+    
+    const reader = new FileReader();
+    reader.readAsArrayBuffer(file);
+    reader.onload = function() {
+    
+      fileContents = reader.result;
+      let arr = new Uint8Array(fileContents);
+      blob = new Blob([arr]);
 
-    const headers = new Headers();
-    headers.append('Content-Type', 'undefined');
-
-    fetch('upload.html?name=' + String(fileName), {
-      method: 'POST',
-      body: formData,
-      headers: headers
-    })
-      .then(response => response.json())
-      .then(data => console.log(data))
-      .catch(error => console.error(error))
+      fetch('upload.html?name=' + file.name, {
+        method: 'POST',
+        body: blob,
+        headers: {
+        'Content-Type': 'application/octet-stream'
+        }
+      })
+  }
     ///
     ">
     Click Me!</button>
