--- a/front/uploadDiv.html
+++ b/front/uploadDiv.html
@@ -1,7 +1,8 @@
 
 <div>
     <p>Selecciona un archivo:</p>
-    <input type="file" id="file-upload">
+    <input type="file" id="file-upload"  accept=".pdf, .doc,.docx,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document
+    audio/* video/* image/*">
     <button onclick="
     //CODE TO UPLOAD
     const fileInput = document.getElementById('file-upload');
