--- a/front/uploadDiv.html
+++ b/front/uploadDiv.html
@@ -1,8 +1,7 @@
 
 <div>
     <p>Selecciona un archivo:</p>
-    <input type="file" id="file-upload"  accept=".pdf, .doc,.docx,application/msword,application/vnd.openxmlformats-officedocument.wordprocessingml.document
-    audio/* video/* image/*">
+    <input type="file" id="file-upload"  accept="*/replaceTypes">
     <button onclick="
     //CODE TO UPLOAD
     const fileInput = document.getElementById('file-upload');
