--- a/front/empty.html
+++ b/front/empty.html
@@ -4,10 +4,12 @@
   <meta charset="utf-8">
   <title>Local network server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!--ReplaceJS-->
+  <!--ReplaceCSS-->
 </head>
 
 <body>
-    <p>Conectado</p>
+  <!--ReplaceHTML-->
 </body>
 
 </html>
