--- a/front/upload.html
+++ b/front/upload.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Local network server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="/upload.js"></script>
+  <script type="text/javascript" src="/lock.js"></script>
   <script src="clientCryptoUtils.js"></script>
   <script src="forge.min.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
