--- a/front/empty.html
+++ b/front/empty.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Local network server</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type='text/javascript' src='/empty.js'></script>
   <!--ReplaceJS-->
   <!--ReplaceCSS-->
 </head>
