--- a/front/upload.html
+++ b/front/upload.html
@@ -1,25 +1,32 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="utf-8">
-  <title>Local network server</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="/lock.js"></script>
-  <script src="clientCryptoUtils.js"></script>
-  <script src="forge.min.js"></script>
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-</head>
 
-<body>
-  <div id="">
+<div>
+    <p>Selecciona un archivo:</p>
+    <input type="file" id="file-upload"  accept="*/replaceTypes">
+    <button onclick="
+    //CODE TO UPLOAD
+    const fileInput = document.getElementById('file-upload');
+    const file = fileInput.files[0]
+    const fileName = file.name
+    console.log('uploading')
+    
+    const reader = new FileReader();
+    reader.readAsArrayBuffer(file);
+    reader.onload = function() {
+    
+      fileContents = reader.result;
+      let arr = new Uint8Array(fileContents);
+      blob = new Blob([arr]);
 
-  </div>
-  <div id="passwordDiv">
-      <p>PASSWORD</p>
-      <input id="inputId" type="text">
-      <button id="buttonId">Enviar</button>
-  </div>
+      fetch('/upload/files?name=' + file.name, {
+        method: 'POST',
+        body: blob,
+        headers: {
+        'Content-Type': 'application/octet-stream'
+        }
+      })
+  }
+    ///
+    ">
+    Click Me!</button>
+</div>
 
-</body>
-
-</html>
